recursion.cons.lessons.recursion.cons.Nfirst.scala.error
nfirst:3: error: identifier expected but ']' found.
    return l.head::[]
                    ^nfirst:4: error: ']' expected but '}' found.
  } else return l.head::nfirst(l.tail, n-1)
  ^nfirst:3: error: type application is not allowed for postfix operators
    return l.head::[]
                 ^